SONAR-14929 New Code using a 'reference branch' doesn't detect changed code with git merge workflow